cititechdNew2024Jan/force-app/main/default/objects/Participants__c/Participants__c.object-meta.xml
<CustomObject>
    <description>These are the people attending a meeting.  Each Participant could be an individual joining a meeting by him/her self OR a group of people attending a meeting from the same meeting room.</description>
    <label>OE Connection</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OE Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>