cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Administrative Contact for this meeting.</inlineHelpText>
    <label>Admin Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Participant1</relationshipName>
    <type>Lookup</type>
</CustomField>