cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the person that will be responsible for managing the details and testing this participants connection.</inlineHelpText>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>