cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Assigned_User_Email_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_Email_Hidden__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The assigned users email for the google integration.</inlineHelpText>
    <label>Assigned User Email (Hidden)</label>
    <type>Email</type>
</CustomField>