cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is an area to type in the names and information about any people that may be attending the meeting at this location. These may be people that you do not need to have as a contact in Salesoforce.</inlineHelpText>
    <label>Attendees</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>