cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Company_type__c.field-meta.xml
<CustomField>
    <fullName>Company_type__c</fullName>
    <label>Company type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Type</valueSetName>
    </valueSet>
</CustomField>