cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/ConferenceLayoutNotes__c.field-meta.xml
<CustomField>
    <fullName>ConferenceLayoutNotes__c</fullName>
    <description>notes Field dedicated to the screen layout/format for the meeting- specifically for group meetings to make sure that we show the right rooms, do equal size or voice activiated etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conference Layout Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>