cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Connection__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Connection__c</referenceTo>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>