cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Connection_Name_hidden__c.field-meta.xml
<CustomField>
    <fullName>Connection_Name_hidden__c</fullName>
    <formula>Connection__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden field so that the connection name displays the text version of the name and not the record id in google calendar.</inlineHelpText>
    <label>Connection Name (hidden)</label>
    <type>Text</type>
</CustomField>