cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Connection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Connection_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter any connection notes for this participant at this particular meeting. These can be referenced for future meetings.</inlineHelpText>
    <label>Connection Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>