cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Connection_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Connection_Room_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection Room NAme</label>
    <referenceTo>Connection__c</referenceTo>
    <relationshipName>Participants1</relationshipName>
    <type>Lookup</type>
</CustomField>