cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Create_Google_Event_for_Scheduled_Testin__c.field-meta.xml
<CustomField>
    <fullName>Create_Google_Event_for_Scheduled_Testin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Google Event for Scheduled Testin</label>
    <type>Checkbox</type>
</CustomField>