cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Dial_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Dial_In_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter in the Dial in Date and Time.</inlineHelpText>
    <label>Dial In Date/Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>