cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Google_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Event_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Google will pass back the event id if this participant is on the google calendar. This is so that any changes made to this participant after it is on the Test Connection Google calendar will update the correct google event.</inlineHelpText>
    <label>Google Event ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>