cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Google_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Google_Event_Status__c</fullName>
    <label>Google Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>