cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Have_we_retested_the_connection__c.field-meta.xml
<CustomField>
    <fullName>Have_we_retested_the_connection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this off if we  have retested the connection. Log the date and time it was retested.</inlineHelpText>
    <label>Have we retested the connection?</label>
    <type>Checkbox</type>
</CustomField>