cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter instructions referring to the attendee</inlineHelpText>
    <label>Instructions:</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>