cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/IT_Contact_Hidden__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Hidden__c</fullName>
    <formula>IT_Contact__r.FirstName + &quot; &quot; + IT_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a hidden field so that the IT contact displays the name in Google Calendar and not the IT Contact id.</inlineHelpText>
    <label>IT Contact (Hidden)</label>
    <type>Text</type>
</CustomField>