cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Backup_RTMP_Stream_Key__c.field-meta.xml
<CustomField>
    <fullName>LS_Backup_RTMP_Stream_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LS Backup RTMP Stream Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>