cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Backup_RTMP_URL__c.field-meta.xml
<CustomField>
    <fullName>LS_Backup_RTMP_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LS Backup RTMP URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>