cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Check_Periscope_for_Errors__c.field-meta.xml
<CustomField>
    <fullName>LS_Check_Periscope_for_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Check Periscope for Errors</label>
    <type>Checkbox</type>
</CustomField>