cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Check_Viewer_Stats_to_see_how_many_vi__c.field-meta.xml
<CustomField>
    <fullName>LS_Check_Viewer_Stats_to_see_how_many_vi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Check Viewer Stats to see how many vi</label>
    <type>Checkbox</type>
</CustomField>