cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Click_SAVE__c.field-meta.xml
<CustomField>
    <fullName>LS_Click_SAVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Click SAVE</label>
    <type>Checkbox</type>
</CustomField>