cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Complete_Edits_or_segment_for_multi__c.field-meta.xml
<CustomField>
    <fullName>LS_Complete_Edits_or_segment_for_multi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS - Complete Edits or segment for multi</label>
    <type>Checkbox</type>
</CustomField>