cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Connect_AV_sources_to_encoder_Call__c.field-meta.xml
<CustomField>
    <fullName>LS_Connect_AV_sources_to_encoder_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Connect AV sources to encoder/Call</label>
    <type>Checkbox</type>
</CustomField>