cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Copy_RTMP_to_encoder__c.field-meta.xml
<CustomField>
    <fullName>LS_Copy_RTMP_to_encoder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Copy RTMP to encoder?</label>
    <type>Checkbox</type>
</CustomField>