cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_END_Broadcast__c.field-meta.xml
<CustomField>
    <fullName>LS_END_Broadcast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>end broadcast when done -</inlineHelpText>
    <label>LS END Broadcast</label>
    <type>Checkbox</type>
</CustomField>