cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Final_slides_added__c.field-meta.xml
<CustomField>
    <fullName>LS_Final_slides_added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Final slides added?</label>
    <type>Checkbox</type>
</CustomField>