cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Generate_RTMP_credentials__c.field-meta.xml
<CustomField>
    <fullName>LS_Generate_RTMP_credentials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>must be done only within 24 hours of start broadcast</inlineHelpText>
    <label>LS Generate RTMP credentials</label>
    <type>Checkbox</type>
</CustomField>