cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Interney_Speed_Tested__c.field-meta.xml
<CustomField>
    <fullName>LS_Interney_Speed_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if internet speed has been tested by Speedtest.net</inlineHelpText>
    <label>LS Internet Speed Tested?</label>
    <type>Checkbox</type>
</CustomField>