cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Monitor_Viewer_Link__c.field-meta.xml
<CustomField>
    <fullName>LS_Monitor_Viewer_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Monitor Viewer Link?</label>
    <type>Checkbox</type>
</CustomField>