cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_On_Event_Day_repeat_Speedtest__c.field-meta.xml
<CustomField>
    <fullName>LS_On_Event_Day_repeat_Speedtest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS On Event Day repeat Speedtest</label>
    <type>Checkbox</type>
</CustomField>