cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Open_KV_Live_Sync_Project__c.field-meta.xml
<CustomField>
    <fullName>LS_Open_KV_Live_Sync_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Open KV Live Sync Project</label>
    <type>Checkbox</type>
</CustomField>