cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Perform_Sync_Timer__c.field-meta.xml
<CustomField>
    <fullName>LS_Perform_Sync_Timer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Perform Sync Timer</label>
    <type>Checkbox</type>
</CustomField>