cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Preview_Live_Project__c.field-meta.xml
<CustomField>
    <fullName>LS_Preview_Live_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Verify Slides and video</inlineHelpText>
    <label>LS Preview Live Project</label>
    <type>Checkbox</type>
</CustomField>