cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Republish_On_demand__c.field-meta.xml
<CustomField>
    <fullName>LS_Republish_On_demand__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>republish as an ondemand after stopping if so designated in PreProduction notes</inlineHelpText>
    <label>LS Republish On-demand</label>
    <type>Checkbox</type>
</CustomField>