cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Run_Test_Stream__c.field-meta.xml
<CustomField>
    <fullName>LS_Run_Test_Stream__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Run Test Stream?</label>
    <type>Checkbox</type>
</CustomField>