cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Start_Local_Recording_for_Backup__c.field-meta.xml
<CustomField>
    <fullName>LS_Start_Local_Recording_for_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Start Local Recording for Backup?</label>
    <type>Checkbox</type>
</CustomField>