cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Start_Streaming_start_timer__c.field-meta.xml
<CustomField>
    <fullName>LS_Start_Streaming_start_timer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Start Streaming - start timer</label>
    <type>Checkbox</type>
</CustomField>