cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_STOP_Encoder_Streaming__c.field-meta.xml
<CustomField>
    <fullName>LS_STOP_Encoder_Streaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS STOP Encoder Streaming</label>
    <type>Checkbox</type>
</CustomField>