cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Sync_Slides_during_Event__c.field-meta.xml
<CustomField>
    <fullName>LS_Sync_Slides_during_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Sync Slides during Event</label>
    <type>Checkbox</type>
</CustomField>