cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/LS_Transcript_Desired__c.field-meta.xml
<CustomField>
    <fullName>LS_Transcript_Desired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Transcript Desired?</label>
    <type>Checkbox</type>
</CustomField>