cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <inlineHelpText>This is the specific Meeting that the Participant information will be associated with.</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>