cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meeting_Date_Time_hidden__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date_Time_hidden__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(Meeting_Start_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(Meeting_Start_Date_Time__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Meeting_Start_Date_Time__c))) &amp; &quot; &quot; &amp; IF( OR( VALUE( MID( TEXT( Meeting_Start_Date_Time__c - 7/24 ), 12, 2 ) ) = 0, VALUE( MID( TEXT( Meeting_Start_Date_Time__c - 7/24 ), 12, 2 ) ) = 12 ), &quot;12&quot;, TEXT( VALUE( MID( TEXT( Meeting_Start_Date_Time__c - 7/24 ), 12, 2 ) ) - IF( VALUE( MID( TEXT( Meeting_Start_Date_Time__c - 7/24 ), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp; MID( TEXT( Meeting_Start_Date_Time__c - 7/24 ), 15, 2 ) &amp; &quot; &quot; &amp; IF( VALUE( MID( TEXT( Meeting_Start_Date_Time__c - 7/24 ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hidden field to properly format meeting start date and time for google calendar.</inlineHelpText>
    <label>Meeting Date/Time (hidden)</label>
    <type>Text</type>
</CustomField>