cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ID__c</fullName>
    <formula>Meeting__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is copied from the Meeting. This field is used in the Google calendar integration.</inlineHelpText>
    <label>OE Number</label>
    <type>Text</type>
</CustomField>