cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Name__c</fullName>
    <formula>Meeting__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Name</label>
    <type>Text</type>
</CustomField>