cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meeting_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Date_Time__c</fullName>
    <formula>Meeting__r.Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the meeting date and time as entered on the Meeting.</inlineHelpText>
    <label>Meeting Start Date/Time</label>
    <type>DateTime</type>
</CustomField>