cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meeting_Title__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Title__c</fullName>
    <formula>Meeting__r.Meeting_Title__c</formula>
    <label>Meeting Title</label>
    <type>Text</type>
</CustomField>