cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Meetings_Archived__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Archived__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meetings (Archived)</label>
    <referenceTo>Meetings_Archived__c</referenceTo>
    <relationshipLabel>OE Connections</relationshipLabel>
    <relationshipName>OE_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>