cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_Attendees__c</fullName>
    <label># of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>