cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/OnDemand__c.field-meta.xml
<CustomField>
    <fullName>OnDemand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if OnDemand required</description>
    <inlineHelpText>Check box if Participant Type is Webinar and on demand is needed and then specify how long it is to be available</inlineHelpText>
    <label>OnDemand</label>
    <type>Checkbox</type>
</CustomField>