cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/OnDemand_Time__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Time__c</fullName>
    <label>OnDemand Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>120 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>