cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Other_Contact__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This should be the ACTUAL participant in the room if not noted elsewhere</inlineHelpText>
    <label>Other Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Participants1</relationshipName>
    <type>Lookup</type>
</CustomField>