cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_City__c.field-meta.xml
<CustomField>
    <fullName>Participant_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the city that the participant will be located in at the time of the meeting.</inlineHelpText>
    <label>OE Connection City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>