cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Participant_Count__c</fullName>
    <description>Estimated individuals at this participant</description>
    <inlineHelpText>Please enter a number for estimated individuals in the room, or on the webinar, or viewiing stream, if known</inlineHelpText>
    <label>Participant Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>