cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_Country__c.field-meta.xml
<CustomField>
    <fullName>Participant_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Country that the Participant will be located in at the time of the meeting.</inlineHelpText>
    <label>OE Connection Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>