cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Participant_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the time that the Participant will end their participation in the meeting. This defaults to the meeting end time.</inlineHelpText>
    <label>Participant End Date/Time</label>
    <type>DateTime</type>
</CustomField>