cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_End_Time2__c.field-meta.xml
<CustomField>
    <fullName>Participant_End_Time2__c</fullName>
    <inlineHelpText>Enter the time the Participant ends.</inlineHelpText>
    <label>Participant End Time</label>
    <type>Time</type>
</CustomField>