cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Participant_End_Time__c</fullName>
    <defaultValue>&quot;00:00 PM&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the end time if the end time is different than the meeting end time. (format:  00:00 PM)</inlineHelpText>
    <label>Participant End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>