cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Participant_Start_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the time the Participant will participate in the meeting. This will default to the meeting start time.</inlineHelpText>
    <label>Participant Start Date/Time</label>
    <type>DateTime</type>
</CustomField>