cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_Start_Time2__c.field-meta.xml
<CustomField>
    <fullName>Participant_Start_Time2__c</fullName>
    <inlineHelpText>Enter the time the Participant starts.</inlineHelpText>
    <label>Participant Start Time</label>
    <type>Time</type>
</CustomField>