cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Participant_Start_Time__c</fullName>
    <defaultValue>&quot;00:00 PM&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the Participant will be joining the meeting at a different time, enter the time here.  (FORMAT: 00:00 PM)</inlineHelpText>
    <label>Participant Start Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>