cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <description>select the connection type.</description>
    <inlineHelpText>select the connection type</inlineHelpText>
    <label>OE Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video Connection</fullName>
                <default>true</default>
                <label>Video Connection</label>
            </value>
            <value>
                <fullName>Audio (phone) line</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>OE Live LiveStream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>