cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Post_Meeting_notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Meeting_notes__c</fullName>
    <description>field for notes after the meeting has concluded</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>put estimated head count for this participant and also use this space to note any issues</inlineHelpText>
    <label>Post Meeting notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>