cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Record_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Record_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this if we should record this meeting</inlineHelpText>
    <label>Record Meeting?</label>
    <type>Checkbox</type>
</CustomField>