cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Retest_Results__c.field-meta.xml
<CustomField>
    <fullName>Retest_Results__c</fullName>
    <inlineHelpText>Did the retest pass or fail?</inlineHelpText>
    <label>Test Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>