cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Retested_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Retested_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date that we retested the connection.</inlineHelpText>
    <label>Tested Date</label>
    <type>Date</type>
</CustomField>