cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <formula>Connection__r.ConnectionName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Room Name from the Connection Record.</inlineHelpText>
    <label>Room Name</label>
    <type>Text</type>
</CustomField>