cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Schedule_Test_End_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Test_End_Date_time__c</fullName>
    <formula>Scheduled_Retest_Date__c +30/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This defaults to 30 minutes after the schedule test date/time and will not be displayed on the Participant. This field is used when sending the event to the Test connection google calendar as there needs to be an end time on all events.</inlineHelpText>
    <label>Schedule Test End Date/time</label>
    <type>DateTime</type>
</CustomField>