cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Scheduled_Retest_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Retest_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Date and Time that the retest is scheduled for.</inlineHelpText>
    <label>Scheduled Test Date</label>
    <type>DateTime</type>
</CustomField>