cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Send_to_Google_as_an_Event__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Google_as_an_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used in the realtime Workato recipe to send participant to Google as an Event.</inlineHelpText>
    <label>Send to Google as an Event?</label>
    <type>Checkbox</type>
</CustomField>