cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Select the status of the Participant and their Connection for this meeting.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Connection Reach Out</fullName>
            </value>
            <value>
                <fullName>Pending Dialing Info or Testing from Client</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
                <isActive>false</isActive>
                <label>Audio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>