cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IMAGE(&quot;https://c.na14.content.force.com/servlet/servlet.FileDownload?file=015d000000BY82i&quot;, &quot;Ready&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>